# DiabetesHospitalPrediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: data_engineering_config.yaml  preprocessing_config.yaml
notebooks/: README.md
src/: data_engineering.py  data_ingestion.py  model_builder.py  model_evaluation.py
src/components/: data_engineering.py
